# smart-gaming-industry-research-agent

./: batch_transcribe.sh  batch_transcribe_fast.sh
projects/: .gitignore  ARCHIVE_README.md  all_udacity_projects.json  generate_master_context.py  karan-notes.md  master_of_master_context.md  reorg-rollback.sh  resume.html
projects/DECI-2/: number_guessing_game.html
projects/automation/: PRD.md  implementation_plan.md
projects/awesome-decks/: convert-to-pdf.js  package-lock.json  package.json  seed.html  seed2.html
projects/building-agents/: .gitignore  CLAUDE.md  README.md  claude_agents.txt  context_engineering.md  how_to_build_subagents.md  prompt.md  review.sh  student_answer.md
projects/context/: claude-agents-ref  claude-agents-sdk-tools.md  claude-agents-sdk.md  split_context_part_0.txt  split_context_part_1.txt  split_context_part_10.txt  split_context_part_11.txt  split_context_part_12.txt  split_context_part_13.txt  split_context_part_2.txt  split_context_part_3.txt  split_context_part_4.txt  split_context_part_5.txt  split_context_part_6.txt  split_context_part_7.txt  split_context_part_8.txt  split_context_part_9.txt
projects/knowledge-agents/: .gitignore  notes.txt  (+1 more)
projects/knowledge-agents/my_submission/master_project/: pyproject.toml
projects/knowledge-agents/my_submission/master_project/blog/: 02_architecture.md  03_knowledge_and_memory.md  05_testing_and_future_deep_dive.md
projects/knowledge-agents/my_submission/master_project/memory/: tasks.md
submissions/: Udaplay_01_solution_project.ipynb  Udaplay_02_solution_project.ipynb
(+246 files in other folders)
