[project]
name = "uda-hub"
version = "0.1.0"
description = "Universal Decision Agent for customer support automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.40",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.8",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "typing-extensions>=4.0.0",
    "ipykernel>=6.30.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["solution"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
